--- a/6-Data_Prep_and_Vis/ex6.ipynb
+++ b/6-Data_Prep_and_Vis/ex6.ipynb
@@ -21,6 +21,7 @@
    "outputs": [],
    "source": [
     "import pandas as pd\n",
+    "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
     "import h5py\n",
     "import os, glob\n",
@@ -121,14 +122,34 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "the_data = blond.read_data(\n",
+    "the_data_calibrated = blond.read_data(\n",
     "    device=\"medal-1\",\n",
     "    signal=\"current1\",\n",
     "    start_ts=time(0,50,0), \n",
-    "    end_ts=time(0,50,1),\n",
-    "    calibrate=False\n",
+    "    end_ts=time(0,50,2),\n",
     ")\n",
-    "the_data.shape"
+    "the_data_uncalibrated = blond.read_data(\n",
+    "    device=\"medal-1\",\n",
+    "    signal=\"current1\",\n",
+    "    start_ts=time(0,50,0), \n",
+    "    end_ts=time(0,50,2),\n",
+    "    calibrate = False\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "fig = plt.figure(figsize=[40, 40])\n",
+    "x = np.linspace(0,2,the_data.shape[0])\n",
+    "plt.plot(x,the_data_uncalibrated)\n",
+    "fig.suptitle(\"Medal-1 Data Calibrated For Current1 Signal Between 0:50:00-0:50:02\",fontsize=40)\n",
+    "plt.savefig(\"exercise1-uncalibrated.svg\",format=\"svg\")"
    ]
   },
   {
@@ -178,7 +199,39 @@
     "\n",
     "When *read_data* function of the Blond class is called, the data is calibrated automatically. So we do not need an extra function call here.\n",
     "\n",
-    "**Note:** If you do not want the data centered and calibrated, you can call *read_data* with the **calibrate** = *False* parameter. Otherwise it will be always calibrated and centered."
+    "**Note:** If you do not want the data centered and calibrated, you can call *read_data* with the **calibrate** = *False* parameter. Otherwise it will be always calibrated and centered.\n",
+    "\n",
+    "You can create calibrated and not calibrated data here."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "fig = plt.figure(figsize=[40, 40])\n",
+    "x = np.linspace(0,2,the_data.shape[0])\n",
+    "plt.plot(x,the_data_uncalibrated)\n",
+    "fig.suptitle(\"Medal-1 Data not calibrated for current1 Signal Between 0:50:00-0:50:02\",fontsize=40)\n",
+    "plt.savefig(\"exercise2-noncalibrated.svg\",format=\"svg\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "fig = plt.figure(figsize=[40, 40])\n",
+    "x = np.linspace(0,2,the_data.shape[0])\n",
+    "plt.plot(x,the_data_calibrated)\n",
+    "fig.suptitle(\"Medal-1 Data Calibrated For Current1 Signal Between 0:50:00-0:50:02\",fontsize=40)\n",
+    "plt.savefig(\"exercise2-calibrated.svg\",format=\"svg\")"
    ]
   },
   {
@@ -203,11 +256,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import numpy as np\n",
-    "import matplotlib.pyplot as plt\n",
-    "\n",
-    "\n",
-    "\n",
     "requested_time_start = time(1,10,10)\n",
     "requested_time_end = time(1,10,15)\n",
     "\n",
