--- a/6-Data_Prep_and_Vis/report6.ipynb
+++ b/6-Data_Prep_and_Vis/report6.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,25 +27,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<img src=\"./images/exercise1-uncalibrated.svg\"/>"
-      ],
-      "text/plain": [
-       "<IPython.core.display.Image object>"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "Image(url= \"./images/exercise1-uncalibrated.svg\")"
    ]
@@ -67,25 +53,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<img src=\"./images/exercise2-calibrated.svg\"/>"
-      ],
-      "text/plain": [
-       "<IPython.core.display.Image object>"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "Image(url= \"./images/exercise2-calibrated.svg\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Exercise 3\n",
+    "Here you can find the screenshot of the dash application. You can run the application by calling *python app.py*. At the left top corner, one can see the time input which are hour, minute and second options from left to the right. This states the start time to read data. Also, left of the time inputs you can choose the duration of time to fetch the data. \n",
+    "\n",
+    "Below those, one may choose between \"Aggregated Signals\"(Clear) or \"Individual Signals\"(Medals), and also the plug(current1, current2...). After those, the data should be visible in the plot. Please note that the application does not allow you to choose data window beyond the time limits of your devices. If the last hdf5 file is 23:10:10 for clear i.e., you are not allowed to choose any data coming after 23:15:10."
    ]
   },
   {
@@ -93,7 +75,57 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "Image(url= \"./images/dash-plotly1.png\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Here is an example of Clear data current1 signal read for the time 01:02:03 for 1 seconds."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Image(url= \"./images/dash-plotly2.png\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Here is an example of medals(medal-1, medal-2 and medal-3) data current1 signal read for the time 01:02:03 for 1 seconds."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Image(url= \"./images/dash-plotly3.png\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Exercise 4\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Image(url= \"./images/exercise4.svg\")"
+   ]
   }
  ],
  "metadata": {
