the version one submitted

--- a/6-Data_Prep_and_Vis/ex6.ipynb
+++ b/6-Data_Prep_and_Vis/ex6.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {
     "scrolled": true
    },
@@ -111,7 +111,7 @@
    "source": [
     "### Example Data Read\n",
     "\n",
-    "In order to read a data interval, one needs to specify **device**(\"clear\", \"medal-1\"...), **signal**(\"current1\", \"current2\"...), start and end times. The time parameters here should be present in the specified device data. You can read either with or without calibration(actually \"calibration and centering\" is one parameter, so if you calibrate it is also centered). \n",
+    "In order to read a data interval, one needs to specify **device**(\"clear\", \"medal-1\"...), **signal**(\"current1\", \"current2\"...), start and end times. The time parameters here should be present in the specified device data. You can read either with or without calibration and centering. \n",
     "\n",
     "**Note:** While start time(start_ts) is inclusive, end time(end_ts) is exclusive. So for the example below, you will get the data of whole 0:50:0, so 0:50:1 is not included."
    ]
@@ -122,18 +122,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "the_data_calibrated = blond.read_data(\n",
-    "    device=\"medal-1\",\n",
-    "    signal=\"current1\",\n",
-    "    start_ts=time(0,50,0), \n",
-    "    end_ts=time(0,50,2),\n",
-    ")\n",
     "the_data_uncalibrated = blond.read_data(\n",
     "    device=\"medal-1\",\n",
     "    signal=\"current1\",\n",
     "    start_ts=time(0,50,0), \n",
     "    end_ts=time(0,50,2),\n",
-    "    calibrate = False\n",
+    "    calibrate = False,\n",
+    "    center = False,\n",
     ")"
    ]
   },
@@ -146,7 +141,7 @@
    "outputs": [],
    "source": [
     "fig = plt.figure(figsize=[40, 40])\n",
-    "x = np.linspace(0,2,the_data.shape[0])\n",
+    "x = np.linspace(0,2,the_data_uncalibrated.shape[0])\n",
     "plt.plot(x,the_data_uncalibrated)\n",
     "fig.suptitle(\"Medal-1 Data Calibrated For Current1 Signal Between 0:50:00-0:50:02\",fontsize=40)\n",
     "plt.savefig(\"exercise1-uncalibrated.svg\",format=\"svg\")"
@@ -199,7 +194,7 @@
     "\n",
     "When *read_data* function of the Blond class is called, the data is calibrated automatically. So we do not need an extra function call here.\n",
     "\n",
-    "**Note:** If you do not want the data centered and calibrated, you can call *read_data* with the **calibrate** = *False* parameter. Otherwise it will be always calibrated and centered.\n",
+    "**Note:** If you do not want the data centered and calibrated, you can call *read_data* with the **calibrate** = *False* and **center**=*False*parameter. Otherwise it will be always calibrated and centered.\n",
     "\n",
     "You can create calibrated and not calibrated data here."
    ]
@@ -207,16 +202,25 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "scrolled": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "fig = plt.figure(figsize=[40, 40])\n",
-    "x = np.linspace(0,2,the_data.shape[0])\n",
-    "plt.plot(x,the_data_uncalibrated)\n",
-    "fig.suptitle(\"Medal-1 Data not calibrated for current1 Signal Between 0:50:00-0:50:02\",fontsize=40)\n",
-    "plt.savefig(\"exercise2-noncalibrated.svg\",format=\"svg\")"
+    "the_data_calibrated_notcentered = blond.read_data(\n",
+    "    device=\"medal-1\",\n",
+    "    signal=\"current1\",\n",
+    "    start_ts=time(0,50,0), \n",
+    "    end_ts=time(0,50,2),\n",
+    "    center=False,\n",
+    "    calibrate=True,\n",
+    ")\n",
+    "the_data_calibrated_centered = blond.read_data(\n",
+    "    device=\"medal-1\",\n",
+    "    signal=\"current1\",\n",
+    "    start_ts=time(0,50,0), \n",
+    "    end_ts=time(0,50,2),\n",
+    "    calibrate = True,\n",
+    "    center = True,\n",
+    ")"
    ]
   },
   {
@@ -228,10 +232,25 @@
    "outputs": [],
    "source": [
     "fig = plt.figure(figsize=[40, 40])\n",
-    "x = np.linspace(0,2,the_data.shape[0])\n",
-    "plt.plot(x,the_data_calibrated)\n",
+    "x = np.linspace(0,2,the_data_calibrated_notcentered.shape[0])\n",
+    "plt.plot(x,the_data_calibrated_notcentered)\n",
+    "fig.suptitle(\"Medal-1 Data not calibrated for current1 Signal Between 0:50:00-0:50:02\",fontsize=40)\n",
+    "plt.savefig(\"exercise2-noncentered.svg\",format=\"svg\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "fig = plt.figure(figsize=[40, 40])\n",
+    "x = np.linspace(0,2,the_data_calibrated_centered.shape[0])\n",
+    "plt.plot(x,the_data_calibrated_centered)\n",
     "fig.suptitle(\"Medal-1 Data Calibrated For Current1 Signal Between 0:50:00-0:50:02\",fontsize=40)\n",
-    "plt.savefig(\"exercise2-calibrated.svg\",format=\"svg\")"
+    "plt.savefig(\"exercise2-centered.svg\",format=\"svg\")"
    ]
   },
   {
